	error messages in several situations.

	Note that spar = 0 is no longer the default and no longer entails
	crossvalidation.

    o	page() has a new `method' argument allowing `method = print'.

    o	mean() has `data frame' method applying mean column-by-column.
	When applied to non-numeric data mean() now returns NA rather
	than a confusing error message (for compatibility with S4).

    o	axis.POSIXct() allows the label date/times to be specified
	via the new `at' argument.

    o	princomp() now has a formula interface.

    o	factanal() and princomp() use napredict() on their scores, so
	na.action = na.exclude is supported.

    o	loess(), lqs(), nls() and ppr() use the standard NA-handling
	and so support na.action = na.exclude.

    o	predict.ppr() now predicts on `newdata' containing NAs.

    o	X11(), png() and jpeg() now give informative warnings if
	they fail to open the device.

    o	New generic function is.na<-(), from S4.  This is by default
	equivalent to x[value] <- NA but may differ, e.g. for factors
	where "NA" is a level.

    o	Printing factors with both level "NA" and missing values
	uses `<NA>' for the missing values to distinguish them.

    o	New Fortran entry points rwarn() and rexit() for warnings and
	error exits from compiled Fortran code.

    o   substring() and substring()<- do nothing silently on a
        character vector of length 0, rather than generating an
        error.  This is consistent with other functions and with S.

    o	data(), demo() and library() now also return the information
	about available data sets, demos or packages.  Similarly,
	help.search() returns its results.



BUG FIXES

    o	Fixed an inconsistency in the evaluation context for on.exit
	expressions between explicit calls to `return' and falling off
	the end returns.

    o	The code in model.matrix.default() handling contrasts was
	assuming a response was present, and so without a response was